Fixed Bug #43926 (isInstance() isn't equivalent to instanceof operator)